use correct stop function in HTML viewer/editor

--- a/ros_bt_py/html/tree_renderer.html
+++ b/ros_bt_py/html/tree_renderer.html
@@ -18,7 +18,7 @@
     <button onclick="step()">Step</button>
     <button onclick="tick()">Tick</button>
     <button onclick="tick_periodically()">Tick Periodically</button>
-    <button onclick="stop()">Stop Ticking</button>
+    <button onclick="stop_tick()">Stop Ticking</button>
     <button onclick="reset()">Reset tree</button>
     <button onclick="shutdown()">Shut Down Tree (needed to add new nodes)</button>
   </div>
