render into div instead of body

--- a/ros_bt_py/html/preact_tree_editor.html
+++ b/ros_bt_py/html/preact_tree_editor.html
@@ -20,5 +20,6 @@
 <!--    <script type="text/babel" src="render_tree.js"></script>-->
   </head>
   <body id="body">
+    <div id="react-container" />
   </body>
 </html>
