--- a/ros_bt_py/html/fullscreen_tree_viewer.html
+++ b/ros_bt_py/html/fullscreen_tree_viewer.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="resources/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
           crossorigin="anonymous">
-    <link rel="stylesheet" href="resources/fontawesome.css"
-          integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+    <link rel="stylesheet" href="resources/fontawesome/css/all.css"
           crossorigin="anonymous">
 
     <script src="resources/d3.v4.js"></script>
