rename fullscreen_tree_viewer to just viewer

--- a/ros_bt_py/html/viewer.html
+++ b/ros_bt_py/html/viewer.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" href="tree_renderer.css" />
     <script type="text/babel" src="components.js"></script>
-    <script type="text/babel" src="fullscreen_app.js"></script>
+    <script type="text/babel" src="viewer_app.js"></script>
   </head>
   <body id="body">
     <div id="react-container" class="fill-screen"/>
