added save and load functionality. this closes #1

--- a/ros_bt_py/html/editor.html
+++ b/ros_bt_py/html/editor.html
@@ -31,6 +31,8 @@
     <link rel="stylesheet" href="resources/fontawesome/css/all.css"
           crossorigin="anonymous">
 
+    <script src="resources/js-yaml.min.js"></script>
+
     <script src="resources/d3.v4.js"></script>
     <script src="resources/d3-flextree.js"></script>
     <script src="resources/roslib.js"></script>
