--- a/ros_bt_py/html/editor.html
+++ b/ros_bt_py/html/editor.html
@@ -48,5 +48,16 @@
   </head>
   <body id="body">
     <div id="react-container" />
+    <div id="loading-icon">
+      <div class="wave">
+        <span>L</span>
+        <span>O</span>
+        <span>A</span>
+        <span>D</span>
+        <span>I</span>
+        <span>N</span>
+        <span>G</span>
+      </div>
+    </div>
   </body>
 </html>
