--- a/ros_bt_py/html/editor.html
+++ b/ros_bt_py/html/editor.html
@@ -25,6 +25,8 @@
     -->
 
     <!-- Local paths -->
+    <title>ros_bt_py behavior tree editor</title>
+    <link rel="shortcut icon" href="resources/favicon.png">
     <link rel="stylesheet" href="resources/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
           crossorigin="anonymous">
