Added support for search in type fields. Closes #13

--- a/ros_bt_py/html/editor.html
+++ b/ros_bt_py/html/editor.html
@@ -34,6 +34,7 @@
           crossorigin="anonymous">
 
     <script src="resources/js-yaml.min.js"></script>
+    <script src="resources/fuse.min.js"></script>
 
     <script src="resources/d3.v4.js"></script>
     <script src="resources/d3-flextree.js"></script>
