WIP load from package

--- a/ros_bt_py/html/editor.html
+++ b/ros_bt_py/html/editor.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="resources/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
           crossorigin="anonymous">
-    <link rel="stylesheet" href="resources/fontawesome/css/all.css"
+          <link rel="stylesheet" href="resources/fontawesome/css/all.css"
           crossorigin="anonymous">
 
     <script src="resources/js-yaml.min.js"></script>
@@ -44,6 +44,7 @@
     <!-- React includes -->
     <script src="resources/react.production.min.js"></script>
     <script src="resources/react-dom.production.min.js"></script>
+    <script src="resources/react-modal.min.js"></script>
 
     <script src="resources/babel.min.js"></script>
 
