--- a/ros_bt_py/html/editor.html
+++ b/ros_bt_py/html/editor.html
@@ -40,7 +40,7 @@
 
     <script src="resources/d3.v4.js"></script>
     <script src="resources/d3-flextree.js"></script>
-    <script src="resources/roslib.js"></script>
+    <script src="resources/roslib.min.js"></script>
     <!-- React includes -->
     <script src="resources/react.production.min.js"></script>
     <script src="resources/react-dom.production.min.js"></script>
