updated d3 to v5.15 and switched to minified version

--- a/ros_bt_py/html/editor.html
+++ b/ros_bt_py/html/editor.html
@@ -38,7 +38,7 @@
     <link href="resources/jsoneditor/jsoneditor.min.css" rel="stylesheet" type="text/css">
     <script src="resources/jsoneditor/jsoneditor.min.js"></script>
 
-    <script src="resources/d3.v4.js"></script>
+    <script src="resources/d3.v5.min.js"></script>
     <script src="resources/d3-flextree.js"></script>
     <script src="resources/roslib.min.js"></script>
     <!-- React includes -->
